// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot other users Profile 1`] = `
.c0 {
  color: #0000ff;
}

<div
  style={
    Object {
      "WebkitAlignItems": "flex-start",
      "WebkitBoxAlign": "start",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "start",
      "WebkitFlexBasis": "auto",
      "WebkitFlexDirection": "row",
      "WebkitFlexShrink": 0,
      "WebkitJustifyContent": "flex-start",
      "alignItems": "flex-start",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0px",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0px",
      "borderRightStyle": "solid",
      "borderRightWidth": "0px",
      "borderTopStyle": "solid",
      "borderTopWidth": "0px",
      "boxSizing": "border-box",
      "display": "flex",
      "flexBasis": "auto",
      "flexDirection": "row",
      "flexShrink": 0,
      "justifyContent": "flex-start",
      "marginBottom": "2.8rem",
      "marginLeft": "2.8rem",
      "marginRight": "2.8rem",
      "marginTop": "2.8rem",
      "minHeight": "0px",
      "minWidth": "0px",
      "msFlexAlign": "start",
      "msFlexDirection": "row",
      "msFlexNegative": 0,
      "msFlexPack": "start",
      "msFlexPreferredSize": "auto",
      "paddingBottom": "0px",
      "paddingLeft": "0px",
      "paddingRight": "0px",
      "paddingTop": "0px",
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "alignItems": "stretch",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexNegative": 0,
        "msFlexPreferredSize": "auto",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <a
      className="ulink-mock c0"
      href="/user/profile/alice"
      hu={0}
      inline={0}
      onClick={[Function]}
      styles=""
    >
      <div
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitFlexBasis": "auto",
            "WebkitFlexDirection": "column",
            "WebkitFlexShrink": 0,
            "alignItems": "stretch",
            "borderBottomLeftRadius": "3.15rem",
            "borderBottomRightRadius": "3.15rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0px",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0px",
            "borderRightStyle": "solid",
            "borderRightWidth": "0px",
            "borderTopLeftRadius": "3.15rem",
            "borderTopRightRadius": "3.15rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "column",
            "flexShrink": 0,
            "height": "6.3rem",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "0px",
            "marginTop": "0px",
            "minHeight": "0px",
            "minWidth": "0px",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "overflowX": "hidden",
            "overflowY": "hidden",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "width": "6.3rem",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitAlignItems": "stretch",
              "WebkitBoxAlign": "stretch",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitFlexBasis": "auto",
              "WebkitFlexDirection": "column",
              "WebkitFlexShrink": 0,
              "alignItems": "stretch",
              "backgroundColor": "rgba(0,0,0,0.00)",
              "backgroundImage": "url(\\"alice-pic.jpg\\")",
              "backgroundPosition": "center",
              "backgroundRepeat": "no-repeat",
              "backgroundSize": "cover",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0px",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0px",
              "borderRightStyle": "solid",
              "borderRightWidth": "0px",
              "borderTopStyle": "solid",
              "borderTopWidth": "0px",
              "bottom": "0px",
              "boxSizing": "border-box",
              "display": "flex",
              "flexBasis": "auto",
              "flexDirection": "column",
              "flexShrink": 0,
              "height": "100%",
              "left": "0px",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "0px",
              "minWidth": "0px",
              "msFlexAlign": "stretch",
              "msFlexDirection": "column",
              "msFlexNegative": 0,
              "msFlexPreferredSize": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />
        <img
          alt=""
          draggable={false}
          src="alice-pic.jpg"
          style={
            Object {
              "bottom": "0px",
              "height": "100%",
              "left": "0px",
              "opacity": 0,
              "position": "absolute",
              "right": "0px",
              "top": "0px",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />
      </div>
    </a>
  </div>
  <div
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxLines": "multiple",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "WebkitFlexWrap": "wrap",
        "alignItems": "stretch",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "flexWrap": "wrap",
        "marginBottom": "0px",
        "marginLeft": "1.4rem",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "auto",
        "msFlexWrap": "wrap",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "WebkitAlignItems": "baseline",
          "WebkitBoxAlign": "baseline",
          "WebkitBoxDirection": "normal",
          "WebkitBoxLines": "multiple",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexBasis": "auto",
          "WebkitFlexDirection": "row",
          "WebkitFlexShrink": 0,
          "WebkitFlexWrap": "wrap",
          "WebkitJustifyContent": "space-between",
          "alignItems": "baseline",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexShrink": 0,
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "0px",
          "minWidth": "0px",
          "msFlexAlign": "baseline",
          "msFlexDirection": "row",
          "msFlexNegative": 0,
          "msFlexPack": "justify",
          "msFlexPreferredSize": "auto",
          "msFlexWrap": "wrap",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitAlignItems": "baseline",
            "WebkitBoxAlign": "baseline",
            "WebkitBoxDirection": "normal",
            "WebkitBoxLines": "multiple",
            "WebkitBoxOrient": "horizontal",
            "WebkitFlexBasis": "auto",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitFlexWrap": "wrap",
            "alignItems": "baseline",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0px",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0px",
            "borderRightStyle": "solid",
            "borderRightWidth": "0px",
            "borderTopStyle": "solid",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexShrink": 1,
            "flexWrap": "wrap",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "0px",
            "marginTop": "0px",
            "minHeight": "0px",
            "minWidth": "0px",
            "msFlexAlign": "baseline",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPreferredSize": "auto",
            "msFlexWrap": "wrap",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          dir="auto"
          mr="1.4rem"
          style={
            Object {
              "WebkitFlexBasis": "auto",
              "WebkitFlexShrink": 0,
              "borderBottomWidth": "0px",
              "borderLeftWidth": "0px",
              "borderRightWidth": "0px",
              "borderTopWidth": "0px",
              "boxSizing": "border-box",
              "color": "rgba(0,0,0,1.00)",
              "display": "flex",
              "flexBasis": "auto",
              "flexShrink": 0,
              "fontFamily": "HelveticaNeue-Bold",
              "fontSize": "2.1rem",
              "fontStyle": "inherit",
              "fontVariant": "inherit",
              "fontWeight": "inherit",
              "lineHeight": "2.8rem",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "1.4rem",
              "marginTop": "0px",
              "msFlexNegative": 0,
              "msFlexPreferredSize": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "position": "relative",
              "textDecoration": "none",
              "whiteSpace": "pre-wrap",
              "wordWrap": "break-word",
            }
          }
        >
          Alice
        </div>
        <div
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexBasis": "auto",
              "WebkitFlexDirection": "row",
              "WebkitFlexShrink": 0,
              "alignItems": "baseline",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0px",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0px",
              "borderRightStyle": "solid",
              "borderRightWidth": "0px",
              "borderTopStyle": "solid",
              "borderTopWidth": "0px",
              "boxSizing": "border-box",
              "display": "flex",
              "flexBasis": "auto",
              "flexDirection": "row",
              "flexShrink": 0,
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "1.4rem",
              "marginTop": "0px",
              "minHeight": "0px",
              "minWidth": "0px",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
              "msFlexNegative": 0,
              "msFlexPreferredSize": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "position": "relative",
              "zIndex": 0,
            }
          }
        >
          <div
            style={
              Object {
                "WebkitAlignItems": "stretch",
                "WebkitBoxAlign": "stretch",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "vertical",
                "WebkitFlexBasis": "auto",
                "WebkitFlexDirection": "column",
                "WebkitFlexShrink": 0,
                "alignItems": "stretch",
                "borderBottomStyle": "solid",
                "borderBottomWidth": "0px",
                "borderLeftStyle": "solid",
                "borderLeftWidth": "0px",
                "borderRightStyle": "solid",
                "borderRightWidth": "0px",
                "borderTopStyle": "solid",
                "borderTopWidth": "0px",
                "bottom": "-1px",
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": "auto",
                "flexDirection": "column",
                "flexShrink": 0,
                "height": "1.225rem",
                "marginBottom": "0px",
                "marginLeft": "0px",
                "marginRight": "0.12249999999999998rem",
                "marginTop": "0px",
                "minHeight": "0px",
                "minWidth": "0px",
                "msFlexAlign": "stretch",
                "msFlexDirection": "column",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "width": "1.225rem",
                "zIndex": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "vertical",
                  "WebkitFlexBasis": "auto",
                  "WebkitFlexDirection": "column",
                  "WebkitFlexShrink": 0,
                  "alignItems": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"r-emoji.png\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "contain",
                  "borderBottomStyle": "solid",
                  "borderBottomWidth": "0px",
                  "borderLeftStyle": "solid",
                  "borderLeftWidth": "0px",
                  "borderRightStyle": "solid",
                  "borderRightWidth": "0px",
                  "borderTopStyle": "solid",
                  "borderTopWidth": "0px",
                  "bottom": "0px",
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flexBasis": "auto",
                  "flexDirection": "column",
                  "flexShrink": 0,
                  "height": "100%",
                  "left": "0px",
                  "marginBottom": "0px",
                  "marginLeft": "0px",
                  "marginRight": "0px",
                  "marginTop": "0px",
                  "minHeight": "0px",
                  "minWidth": "0px",
                  "msFlexAlign": "stretch",
                  "msFlexDirection": "column",
                  "msFlexNegative": 0,
                  "msFlexPreferredSize": "auto",
                  "paddingBottom": "0px",
                  "paddingLeft": "0px",
                  "paddingRight": "0px",
                  "paddingTop": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              draggable={false}
              src="r-emoji.png"
              style={
                Object {
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "opacity": 0,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
          </div>
          <div
            dir="auto"
            inline={0}
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "WebkitFlexShrink": 0,
                "borderBottomWidth": "0px",
                "borderLeftWidth": "0px",
                "borderRightWidth": "0px",
                "borderTopWidth": "0px",
                "boxSizing": "border-box",
                "color": "rgba(0,0,0,1.00)",
                "display": "flex",
                "flexBasis": "auto",
                "flexShrink": 0,
                "fontFamily": "HelveticaNeue-CondensedBold",
                "fontSize": "1.225rem",
                "fontStyle": "inherit",
                "fontVariant": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "1.6333333333333333rem",
                "marginBottom": "0px",
                "marginLeft": "0px",
                "marginRight": "0px",
                "marginTop": "0px",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "textDecoration": "none",
                "whiteSpace": "pre-wrap",
                "wordWrap": "break-word",
              }
            }
          >
            11
          </div>
        </div>
        <div
          align="baseline"
          dir="auto"
          mr={2}
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitFlexBasis": "auto",
              "WebkitFlexShrink": 0,
              "alignItems": "baseline",
              "borderBottomWidth": "0px",
              "borderLeftWidth": "0px",
              "borderRightWidth": "0px",
              "borderTopWidth": "0px",
              "boxSizing": "border-box",
              "color": "rgba(0,0,0,1.00)",
              "display": "flex",
              "flexBasis": "auto",
              "flexShrink": 0,
              "fontFamily": "HelveticaNeue-CondensedBold",
              "fontSize": "1.225rem",
              "fontStyle": "inherit",
              "fontVariant": "inherit",
              "fontWeight": "inherit",
              "lineHeight": "1.6333333333333333rem",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "1.4rem",
              "marginTop": "0px",
              "msFlexAlign": "baseline",
              "msFlexNegative": 0,
              "msFlexPreferredSize": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "position": "relative",
              "textDecoration": "none",
              "whiteSpace": "pre-wrap",
              "wordWrap": "break-word",
            }
          }
          user={
            Object {
              "_id": "a00000000000000000000000",
              "balance": 111,
              "bio": "hi i'm alice!",
              "email": "alice@alice.com",
              "ethAddress": Array [
                "0x627306090abaB3A6e1400e9345bC60c78a8BEf57",
              ],
              "handle": "alice",
              "image": "alice-pic.jpg",
              "lockedTokens": 0,
              "name": "Alice",
              "password": "test",
              "relevance": Object {
                "pagerank": 11,
              },
            }
          }
        >
          <span
            c="#7ED321"
            dir="auto"
            fs={1.75}
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "WebkitFlexShrink": 0,
                "WebkitTextDecorationColor": "rgba(126,211,33,1.00)",
                "borderBottomWidth": "0px",
                "borderLeftWidth": "0px",
                "borderRightWidth": "0px",
                "borderTopWidth": "0px",
                "boxSizing": "border-box",
                "color": "rgba(126,211,33,1.00)",
                "display": "flex",
                "flexBasis": "auto",
                "flexShrink": 0,
                "fontFamily": "inherit",
                "fontSize": "1.225rem",
                "fontStyle": "inherit",
                "fontVariant": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "inherit",
                "marginBottom": "0px",
                "marginLeft": "0px",
                "marginRight": "0px",
                "marginTop": "0px",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "textDecoration": "none",
                "textDecorationColor": "rgba(126,211,33,1.00)",
                "whiteSpace": "inherit",
                "wordWrap": "break-word",
              }
            }
          >
            ▲ 
          </span>
          0
          %
        </div>
        <div
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexBasis": "auto",
              "WebkitFlexDirection": "row",
              "WebkitFlexShrink": 0,
              "alignItems": "baseline",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0px",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0px",
              "borderRightStyle": "solid",
              "borderRightWidth": "0px",
              "borderTopStyle": "solid",
              "borderTopWidth": "0px",
              "boxSizing": "border-box",
              "display": "flex",
              "flexBasis": "auto",
              "flexDirection": "row",
              "flexShrink": 0,
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "1.05rem",
              "marginTop": "0px",
              "minHeight": "0px",
              "minWidth": "0px",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
              "msFlexNegative": 0,
              "msFlexPreferredSize": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "position": "relative",
              "zIndex": 0,
            }
          }
        >
          <div
            style={
              Object {
                "WebkitAlignItems": "stretch",
                "WebkitBoxAlign": "stretch",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "vertical",
                "WebkitFlexBasis": "auto",
                "WebkitFlexDirection": "column",
                "WebkitFlexShrink": 0,
                "alignItems": "stretch",
                "borderBottomStyle": "solid",
                "borderBottomWidth": "0px",
                "borderLeftStyle": "solid",
                "borderLeftWidth": "0px",
                "borderRightStyle": "solid",
                "borderRightWidth": "0px",
                "borderTopStyle": "solid",
                "borderTopWidth": "0px",
                "bottom": "-1px",
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": "auto",
                "flexDirection": "column",
                "flexShrink": 0,
                "height": "1.225rem",
                "marginBottom": "0px",
                "marginLeft": "0px",
                "marginRight": "0px",
                "marginTop": "0px",
                "minHeight": "0px",
                "minWidth": "0px",
                "msFlexAlign": "stretch",
                "msFlexDirection": "column",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "width": "1.2862500000000001rem",
                "zIndex": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "vertical",
                  "WebkitFlexBasis": "auto",
                  "WebkitFlexDirection": "column",
                  "WebkitFlexShrink": 0,
                  "alignItems": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"relevantcoin.png\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "contain",
                  "borderBottomStyle": "solid",
                  "borderBottomWidth": "0px",
                  "borderLeftStyle": "solid",
                  "borderLeftWidth": "0px",
                  "borderRightStyle": "solid",
                  "borderRightWidth": "0px",
                  "borderTopStyle": "solid",
                  "borderTopWidth": "0px",
                  "bottom": "0px",
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flexBasis": "auto",
                  "flexDirection": "column",
                  "flexShrink": 0,
                  "height": "100%",
                  "left": "0px",
                  "marginBottom": "0px",
                  "marginLeft": "0px",
                  "marginRight": "0px",
                  "marginTop": "0px",
                  "minHeight": "0px",
                  "minWidth": "0px",
                  "msFlexAlign": "stretch",
                  "msFlexDirection": "column",
                  "msFlexNegative": 0,
                  "msFlexPreferredSize": "auto",
                  "paddingBottom": "0px",
                  "paddingLeft": "0px",
                  "paddingRight": "0px",
                  "paddingTop": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              draggable={false}
              src="relevantcoin.png"
              style={
                Object {
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "opacity": 0,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
          </div>
          <div
            dir="auto"
            inline={0}
            ml={0.4375}
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "WebkitFlexShrink": 0,
                "borderBottomWidth": "0px",
                "borderLeftWidth": "0px",
                "borderRightWidth": "0px",
                "borderTopWidth": "0px",
                "boxSizing": "border-box",
                "color": "rgba(0,0,0,1.00)",
                "display": "flex",
                "flexBasis": "auto",
                "flexShrink": 0,
                "fontFamily": "HelveticaNeue-CondensedBold",
                "fontSize": "1.225rem",
                "fontStyle": "inherit",
                "fontVariant": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "1.6333333333333333rem",
                "marginBottom": "0px",
                "marginLeft": "0.30625rem",
                "marginRight": "0px",
                "marginTop": "0px",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "textDecoration": "none",
                "whiteSpace": "pre-wrap",
                "wordWrap": "break-word",
              }
            }
          >
            
            111
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitFlexBasis": "auto",
            "WebkitFlexDirection": "column",
            "WebkitFlexShrink": 0,
            "alignItems": "stretch",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0px",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0px",
            "borderRightStyle": "solid",
            "borderRightWidth": "0px",
            "borderTopStyle": "solid",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "column",
            "flexShrink": 0,
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "0px",
            "marginTop": "0px",
            "minHeight": "0px",
            "minWidth": "0px",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "zIndex": 0,
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "vertical",
          "WebkitFlexBasis": "auto",
          "WebkitFlexDirection": "column",
          "WebkitFlexShrink": 0,
          "alignItems": "stretch",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "auto",
          "flexDirection": "column",
          "flexShrink": 0,
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "1.4rem",
          "minHeight": "0px",
          "minWidth": "0px",
          "msFlexAlign": "stretch",
          "msFlexDirection": "column",
          "msFlexNegative": 0,
          "msFlexPreferredSize": "auto",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        dir="auto"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "WebkitFlexShrink": 0,
            "borderBottomWidth": "0px",
            "borderLeftWidth": "0px",
            "borderRightWidth": "0px",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "color": "inherit",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "fontFamily": "HelveticaNeue",
            "fontSize": "1.225rem",
            "fontStyle": "inherit",
            "fontVariant": "inherit",
            "fontWeight": "inherit",
            "lineHeight": "1.6333333333333333rem",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "0px",
            "marginTop": "0px",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "textDecoration": "none",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
      >
        <span>
          hi i'm alice!
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot own Profile 1`] = `
.c0 {
  color: #0000ff;
}

.c1 {
  color: #0000ff;
  color: #0000ff;
}

.c2 {
  font-size: 1.05rem;
  line-height: 1.4rem;
  font-family: HelveticaNeue-Medium;
  color: #999999;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000000;
  -webkit-text-decoration-color: #000000;
  text-decoration-color: #000000;
  color: #0000ff;
  color: #000000;
  -webkit-text-decoration-color: #000000;
  text-decoration-color: #000000;
}

.c2:hover * {
  color: #999999;
}

.c2:hover * {
  fill: #999999;
}

.c2:hover * {
  color: #999999;
}

<div
  style={
    Object {
      "WebkitAlignItems": "flex-start",
      "WebkitBoxAlign": "start",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "start",
      "WebkitFlexBasis": "auto",
      "WebkitFlexDirection": "row",
      "WebkitFlexShrink": 0,
      "WebkitJustifyContent": "flex-start",
      "alignItems": "flex-start",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0px",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0px",
      "borderRightStyle": "solid",
      "borderRightWidth": "0px",
      "borderTopStyle": "solid",
      "borderTopWidth": "0px",
      "boxSizing": "border-box",
      "display": "flex",
      "flexBasis": "auto",
      "flexDirection": "row",
      "flexShrink": 0,
      "justifyContent": "flex-start",
      "marginBottom": "2.8rem",
      "marginLeft": "2.8rem",
      "marginRight": "2.8rem",
      "marginTop": "2.8rem",
      "minHeight": "0px",
      "minWidth": "0px",
      "msFlexAlign": "start",
      "msFlexDirection": "row",
      "msFlexNegative": 0,
      "msFlexPack": "start",
      "msFlexPreferredSize": "auto",
      "paddingBottom": "0px",
      "paddingLeft": "0px",
      "paddingRight": "0px",
      "paddingTop": "0px",
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "alignItems": "stretch",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexNegative": 0,
        "msFlexPreferredSize": "auto",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <a
      className="ulink-mock c0"
      href="/user/profile/alice"
      hu={0}
      inline={0}
      onClick={[Function]}
      styles=""
    >
      <div
        style={
          Object {
            "WebkitAlignItems": "stretch",
            "WebkitBoxAlign": "stretch",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "vertical",
            "WebkitFlexBasis": "auto",
            "WebkitFlexDirection": "column",
            "WebkitFlexShrink": 0,
            "alignItems": "stretch",
            "borderBottomLeftRadius": "3.15rem",
            "borderBottomRightRadius": "3.15rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0px",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0px",
            "borderRightStyle": "solid",
            "borderRightWidth": "0px",
            "borderTopLeftRadius": "3.15rem",
            "borderTopRightRadius": "3.15rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "column",
            "flexShrink": 0,
            "height": "6.3rem",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "0px",
            "marginTop": "0px",
            "minHeight": "0px",
            "minWidth": "0px",
            "msFlexAlign": "stretch",
            "msFlexDirection": "column",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "overflowX": "hidden",
            "overflowY": "hidden",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "width": "6.3rem",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitAlignItems": "stretch",
              "WebkitBoxAlign": "stretch",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitFlexBasis": "auto",
              "WebkitFlexDirection": "column",
              "WebkitFlexShrink": 0,
              "alignItems": "stretch",
              "backgroundColor": "rgba(0,0,0,0.00)",
              "backgroundImage": "url(\\"alice-pic.jpg\\")",
              "backgroundPosition": "center",
              "backgroundRepeat": "no-repeat",
              "backgroundSize": "cover",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0px",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0px",
              "borderRightStyle": "solid",
              "borderRightWidth": "0px",
              "borderTopStyle": "solid",
              "borderTopWidth": "0px",
              "bottom": "0px",
              "boxSizing": "border-box",
              "display": "flex",
              "flexBasis": "auto",
              "flexDirection": "column",
              "flexShrink": 0,
              "height": "100%",
              "left": "0px",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "0px",
              "minWidth": "0px",
              "msFlexAlign": "stretch",
              "msFlexDirection": "column",
              "msFlexNegative": 0,
              "msFlexPreferredSize": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />
        <img
          alt=""
          draggable={false}
          src="alice-pic.jpg"
          style={
            Object {
              "bottom": "0px",
              "height": "100%",
              "left": "0px",
              "opacity": 0,
              "position": "absolute",
              "right": "0px",
              "top": "0px",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />
      </div>
    </a>
  </div>
  <div
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxLines": "multiple",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "WebkitFlexWrap": "wrap",
        "alignItems": "stretch",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "flexWrap": "wrap",
        "marginBottom": "0px",
        "marginLeft": "1.4rem",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "auto",
        "msFlexWrap": "wrap",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "WebkitAlignItems": "baseline",
          "WebkitBoxAlign": "baseline",
          "WebkitBoxDirection": "normal",
          "WebkitBoxLines": "multiple",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexBasis": "auto",
          "WebkitFlexDirection": "row",
          "WebkitFlexShrink": 0,
          "WebkitFlexWrap": "wrap",
          "WebkitJustifyContent": "space-between",
          "alignItems": "baseline",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexShrink": 0,
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "0px",
          "minWidth": "0px",
          "msFlexAlign": "baseline",
          "msFlexDirection": "row",
          "msFlexNegative": 0,
          "msFlexPack": "justify",
          "msFlexPreferredSize": "auto",
          "msFlexWrap": "wrap",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitAlignItems": "baseline",
            "WebkitBoxAlign": "baseline",
            "WebkitBoxDirection": "normal",
            "WebkitBoxLines": "multiple",
            "WebkitBoxOrient": "horizontal",
            "WebkitFlexBasis": "auto",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitFlexWrap": "wrap",
            "alignItems": "baseline",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0px",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0px",
            "borderRightStyle": "solid",
            "borderRightWidth": "0px",
            "borderTopStyle": "solid",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexShrink": 1,
            "flexWrap": "wrap",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "0px",
            "marginTop": "0px",
            "minHeight": "0px",
            "minWidth": "0px",
            "msFlexAlign": "baseline",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPreferredSize": "auto",
            "msFlexWrap": "wrap",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          dir="auto"
          mr="1.4rem"
          style={
            Object {
              "WebkitFlexBasis": "auto",
              "WebkitFlexShrink": 0,
              "borderBottomWidth": "0px",
              "borderLeftWidth": "0px",
              "borderRightWidth": "0px",
              "borderTopWidth": "0px",
              "boxSizing": "border-box",
              "color": "rgba(0,0,0,1.00)",
              "display": "flex",
              "flexBasis": "auto",
              "flexShrink": 0,
              "fontFamily": "HelveticaNeue-Bold",
              "fontSize": "2.1rem",
              "fontStyle": "inherit",
              "fontVariant": "inherit",
              "fontWeight": "inherit",
              "lineHeight": "2.8rem",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "1.4rem",
              "marginTop": "0px",
              "msFlexNegative": 0,
              "msFlexPreferredSize": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "position": "relative",
              "textDecoration": "none",
              "whiteSpace": "pre-wrap",
              "wordWrap": "break-word",
            }
          }
        >
          Alice
        </div>
        <div
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexBasis": "auto",
              "WebkitFlexDirection": "row",
              "WebkitFlexShrink": 0,
              "alignItems": "baseline",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0px",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0px",
              "borderRightStyle": "solid",
              "borderRightWidth": "0px",
              "borderTopStyle": "solid",
              "borderTopWidth": "0px",
              "boxSizing": "border-box",
              "display": "flex",
              "flexBasis": "auto",
              "flexDirection": "row",
              "flexShrink": 0,
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "1.4rem",
              "marginTop": "0px",
              "minHeight": "0px",
              "minWidth": "0px",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
              "msFlexNegative": 0,
              "msFlexPreferredSize": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "position": "relative",
              "zIndex": 0,
            }
          }
        >
          <div
            style={
              Object {
                "WebkitAlignItems": "stretch",
                "WebkitBoxAlign": "stretch",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "vertical",
                "WebkitFlexBasis": "auto",
                "WebkitFlexDirection": "column",
                "WebkitFlexShrink": 0,
                "alignItems": "stretch",
                "borderBottomStyle": "solid",
                "borderBottomWidth": "0px",
                "borderLeftStyle": "solid",
                "borderLeftWidth": "0px",
                "borderRightStyle": "solid",
                "borderRightWidth": "0px",
                "borderTopStyle": "solid",
                "borderTopWidth": "0px",
                "bottom": "-1px",
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": "auto",
                "flexDirection": "column",
                "flexShrink": 0,
                "height": "1.225rem",
                "marginBottom": "0px",
                "marginLeft": "0px",
                "marginRight": "0.12249999999999998rem",
                "marginTop": "0px",
                "minHeight": "0px",
                "minWidth": "0px",
                "msFlexAlign": "stretch",
                "msFlexDirection": "column",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "width": "1.225rem",
                "zIndex": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "vertical",
                  "WebkitFlexBasis": "auto",
                  "WebkitFlexDirection": "column",
                  "WebkitFlexShrink": 0,
                  "alignItems": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"r-emoji.png\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "contain",
                  "borderBottomStyle": "solid",
                  "borderBottomWidth": "0px",
                  "borderLeftStyle": "solid",
                  "borderLeftWidth": "0px",
                  "borderRightStyle": "solid",
                  "borderRightWidth": "0px",
                  "borderTopStyle": "solid",
                  "borderTopWidth": "0px",
                  "bottom": "0px",
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flexBasis": "auto",
                  "flexDirection": "column",
                  "flexShrink": 0,
                  "height": "100%",
                  "left": "0px",
                  "marginBottom": "0px",
                  "marginLeft": "0px",
                  "marginRight": "0px",
                  "marginTop": "0px",
                  "minHeight": "0px",
                  "minWidth": "0px",
                  "msFlexAlign": "stretch",
                  "msFlexDirection": "column",
                  "msFlexNegative": 0,
                  "msFlexPreferredSize": "auto",
                  "paddingBottom": "0px",
                  "paddingLeft": "0px",
                  "paddingRight": "0px",
                  "paddingTop": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              draggable={false}
              src="r-emoji.png"
              style={
                Object {
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "opacity": 0,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
          </div>
          <div
            dir="auto"
            inline={0}
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "WebkitFlexShrink": 0,
                "borderBottomWidth": "0px",
                "borderLeftWidth": "0px",
                "borderRightWidth": "0px",
                "borderTopWidth": "0px",
                "boxSizing": "border-box",
                "color": "rgba(0,0,0,1.00)",
                "display": "flex",
                "flexBasis": "auto",
                "flexShrink": 0,
                "fontFamily": "HelveticaNeue-CondensedBold",
                "fontSize": "1.225rem",
                "fontStyle": "inherit",
                "fontVariant": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "1.6333333333333333rem",
                "marginBottom": "0px",
                "marginLeft": "0px",
                "marginRight": "0px",
                "marginTop": "0px",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "textDecoration": "none",
                "whiteSpace": "pre-wrap",
                "wordWrap": "break-word",
              }
            }
          >
            11
          </div>
        </div>
        <div
          align="baseline"
          dir="auto"
          mr={2}
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitFlexBasis": "auto",
              "WebkitFlexShrink": 0,
              "alignItems": "baseline",
              "borderBottomWidth": "0px",
              "borderLeftWidth": "0px",
              "borderRightWidth": "0px",
              "borderTopWidth": "0px",
              "boxSizing": "border-box",
              "color": "rgba(0,0,0,1.00)",
              "display": "flex",
              "flexBasis": "auto",
              "flexShrink": 0,
              "fontFamily": "HelveticaNeue-CondensedBold",
              "fontSize": "1.225rem",
              "fontStyle": "inherit",
              "fontVariant": "inherit",
              "fontWeight": "inherit",
              "lineHeight": "1.6333333333333333rem",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "1.4rem",
              "marginTop": "0px",
              "msFlexAlign": "baseline",
              "msFlexNegative": 0,
              "msFlexPreferredSize": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "position": "relative",
              "textDecoration": "none",
              "whiteSpace": "pre-wrap",
              "wordWrap": "break-word",
            }
          }
          user={
            Object {
              "_id": "a00000000000000000000000",
              "balance": 111,
              "bio": "hi i'm alice!",
              "email": "alice@alice.com",
              "ethAddress": Array [
                "0x627306090abaB3A6e1400e9345bC60c78a8BEf57",
              ],
              "handle": "alice",
              "image": "alice-pic.jpg",
              "lockedTokens": 0,
              "name": "Alice",
              "password": "test",
              "relevance": Object {
                "pagerank": 11,
              },
            }
          }
        >
          <span
            c="#7ED321"
            dir="auto"
            fs={1.75}
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "WebkitFlexShrink": 0,
                "WebkitTextDecorationColor": "rgba(126,211,33,1.00)",
                "borderBottomWidth": "0px",
                "borderLeftWidth": "0px",
                "borderRightWidth": "0px",
                "borderTopWidth": "0px",
                "boxSizing": "border-box",
                "color": "rgba(126,211,33,1.00)",
                "display": "flex",
                "flexBasis": "auto",
                "flexShrink": 0,
                "fontFamily": "inherit",
                "fontSize": "1.225rem",
                "fontStyle": "inherit",
                "fontVariant": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "inherit",
                "marginBottom": "0px",
                "marginLeft": "0px",
                "marginRight": "0px",
                "marginTop": "0px",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "textDecoration": "none",
                "textDecorationColor": "rgba(126,211,33,1.00)",
                "whiteSpace": "inherit",
                "wordWrap": "break-word",
              }
            }
          >
            ▲ 
          </span>
          0
          %
        </div>
        <div
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexBasis": "auto",
              "WebkitFlexDirection": "row",
              "WebkitFlexShrink": 0,
              "alignItems": "baseline",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0px",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0px",
              "borderRightStyle": "solid",
              "borderRightWidth": "0px",
              "borderTopStyle": "solid",
              "borderTopWidth": "0px",
              "boxSizing": "border-box",
              "display": "flex",
              "flexBasis": "auto",
              "flexDirection": "row",
              "flexShrink": 0,
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "1.05rem",
              "marginTop": "0px",
              "minHeight": "0px",
              "minWidth": "0px",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
              "msFlexNegative": 0,
              "msFlexPreferredSize": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "position": "relative",
              "zIndex": 0,
            }
          }
        >
          <div
            style={
              Object {
                "WebkitAlignItems": "stretch",
                "WebkitBoxAlign": "stretch",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "vertical",
                "WebkitFlexBasis": "auto",
                "WebkitFlexDirection": "column",
                "WebkitFlexShrink": 0,
                "alignItems": "stretch",
                "borderBottomStyle": "solid",
                "borderBottomWidth": "0px",
                "borderLeftStyle": "solid",
                "borderLeftWidth": "0px",
                "borderRightStyle": "solid",
                "borderRightWidth": "0px",
                "borderTopStyle": "solid",
                "borderTopWidth": "0px",
                "bottom": "-1px",
                "boxSizing": "border-box",
                "display": "flex",
                "flexBasis": "auto",
                "flexDirection": "column",
                "flexShrink": 0,
                "height": "1.225rem",
                "marginBottom": "0px",
                "marginLeft": "0px",
                "marginRight": "0px",
                "marginTop": "0px",
                "minHeight": "0px",
                "minWidth": "0px",
                "msFlexAlign": "stretch",
                "msFlexDirection": "column",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "width": "1.2862500000000001rem",
                "zIndex": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "vertical",
                  "WebkitFlexBasis": "auto",
                  "WebkitFlexDirection": "column",
                  "WebkitFlexShrink": 0,
                  "alignItems": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"relevantcoin.png\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "contain",
                  "borderBottomStyle": "solid",
                  "borderBottomWidth": "0px",
                  "borderLeftStyle": "solid",
                  "borderLeftWidth": "0px",
                  "borderRightStyle": "solid",
                  "borderRightWidth": "0px",
                  "borderTopStyle": "solid",
                  "borderTopWidth": "0px",
                  "bottom": "0px",
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flexBasis": "auto",
                  "flexDirection": "column",
                  "flexShrink": 0,
                  "height": "100%",
                  "left": "0px",
                  "marginBottom": "0px",
                  "marginLeft": "0px",
                  "marginRight": "0px",
                  "marginTop": "0px",
                  "minHeight": "0px",
                  "minWidth": "0px",
                  "msFlexAlign": "stretch",
                  "msFlexDirection": "column",
                  "msFlexNegative": 0,
                  "msFlexPreferredSize": "auto",
                  "paddingBottom": "0px",
                  "paddingLeft": "0px",
                  "paddingRight": "0px",
                  "paddingTop": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              draggable={false}
              src="relevantcoin.png"
              style={
                Object {
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "opacity": 0,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
          </div>
          <div
            dir="auto"
            inline={0}
            ml={0.4375}
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "WebkitFlexShrink": 0,
                "borderBottomWidth": "0px",
                "borderLeftWidth": "0px",
                "borderRightWidth": "0px",
                "borderTopWidth": "0px",
                "boxSizing": "border-box",
                "color": "rgba(0,0,0,1.00)",
                "display": "flex",
                "flexBasis": "auto",
                "flexShrink": 0,
                "fontFamily": "HelveticaNeue-CondensedBold",
                "fontSize": "1.225rem",
                "fontStyle": "inherit",
                "fontVariant": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "1.6333333333333333rem",
                "marginBottom": "0px",
                "marginLeft": "0.30625rem",
                "marginRight": "0px",
                "marginTop": "0px",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "textDecoration": "none",
                "whiteSpace": "pre-wrap",
                "wordWrap": "break-word",
              }
            }
          >
            
            111
          </div>
        </div>
      </div>
      <a
        className="ulink-mock c1"
        color="#0000ff"
        href="/"
        hu={0}
        inline={0}
        onClick={[Function]}
        styles=""
      >
        Logout
      </a>
    </div>
    <div
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "vertical",
          "WebkitFlexBasis": "auto",
          "WebkitFlexDirection": "column",
          "WebkitFlexShrink": 0,
          "alignItems": "stretch",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "auto",
          "flexDirection": "column",
          "flexShrink": 0,
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "1.4rem",
          "minHeight": "0px",
          "minWidth": "0px",
          "msFlexAlign": "stretch",
          "msFlexDirection": "column",
          "msFlexNegative": 0,
          "msFlexPreferredSize": "auto",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        dir="auto"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "WebkitFlexShrink": 0,
            "borderBottomWidth": "0px",
            "borderLeftWidth": "0px",
            "borderRightWidth": "0px",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "color": "inherit",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "fontFamily": "HelveticaNeue",
            "fontSize": "1.225rem",
            "fontStyle": "inherit",
            "fontVariant": "inherit",
            "fontWeight": "inherit",
            "lineHeight": "1.6333333333333333rem",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "0px",
            "marginTop": "0px",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "textDecoration": "none",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
      >
        <span>
          hi i'm alice!
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitFlexBasis": "auto",
          "WebkitFlexDirection": "row",
          "WebkitFlexShrink": 0,
          "alignItems": "center",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexShrink": 0,
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "1.4rem",
          "minHeight": "0px",
          "minWidth": "0px",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexNegative": 0,
          "msFlexPreferredSize": "auto",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        dir="auto"
        mr="0.35rem"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "WebkitFlexShrink": 0,
            "WebkitTextDecorationColor": "rgba(0,0,0,1.00)",
            "WebkitTextDecorationStyle": "solid",
            "borderBottomWidth": "0px",
            "borderLeftWidth": "0px",
            "borderRightWidth": "0px",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "color": "rgba(153,153,153,1.00)",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "fontFamily": "HelveticaNeue-Medium",
            "fontSize": "1.05rem",
            "fontStyle": "inherit",
            "fontVariant": "inherit",
            "fontWeight": "inherit",
            "lineHeight": "1.4rem",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "0.35rem",
            "marginTop": "0px",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "textDecoration": "underline",
            "textDecorationColor": "rgba(0,0,0,1.00)",
            "textDecorationStyle": "solid",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
      >
        <a
          c="#000000"
          className="ulink-mock c2"
          hc="#999999"
          href="//settings?redirect=/"
          hu={0}
          inline={0}
          onClick={[Function]}
          styles={
            Array [
              "font-size: 1.05rem; line-height: 1.4rem; font-family: HelveticaNeue-Medium; color: #999999; text-decoration: underline;",
              " ",
              [Function],
              ";",
              [Function],
              ";",
            ]
          }
        >
          <span
            align="center"
            dir="auto"
            fdirection="row"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexBasis": "auto",
                "WebkitFlexDirection": "row",
                "WebkitFlexShrink": 0,
                "alignItems": "center",
                "borderBottomWidth": "0px",
                "borderLeftWidth": "0px",
                "borderRightWidth": "0px",
                "borderTopWidth": "0px",
                "boxSizing": "border-box",
                "color": "inherit",
                "display": "flex",
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexShrink": 0,
                "fontFamily": "inherit",
                "fontSize": "inherit",
                "fontStyle": "inherit",
                "fontVariant": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "inherit",
                "marginBottom": "0px",
                "marginLeft": "0px",
                "marginRight": "0px",
                "marginTop": "0px",
                "msFlexAlign": "center",
                "msFlexDirection": "row",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "textDecoration": "none",
                "whiteSpace": "inherit",
                "wordWrap": "break-word",
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "vertical",
                  "WebkitFlexBasis": "auto",
                  "WebkitFlexDirection": "column",
                  "WebkitFlexShrink": 0,
                  "alignItems": "stretch",
                  "borderBottomStyle": "solid",
                  "borderBottomWidth": "0px",
                  "borderLeftStyle": "solid",
                  "borderLeftWidth": "0px",
                  "borderRightStyle": "solid",
                  "borderRightWidth": "0px",
                  "borderTopStyle": "solid",
                  "borderTopWidth": "0px",
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flexBasis": "auto",
                  "flexDirection": "column",
                  "flexShrink": 0,
                  "marginBottom": "0px",
                  "marginLeft": "0px",
                  "marginRight": "0.35rem",
                  "marginTop": "0px",
                  "minHeight": "0px",
                  "minWidth": "0px",
                  "msFlexAlign": "stretch",
                  "msFlexDirection": "column",
                  "msFlexNegative": 0,
                  "msFlexPreferredSize": "auto",
                  "paddingBottom": "0px",
                  "paddingLeft": "0px",
                  "paddingRight": "0px",
                  "paddingTop": "0px",
                  "position": "relative",
                  "zIndex": 0,
                }
              }
            >
              <svg
                bg="#999999"
                h="1.4rem"
                height="12"
                viewBox="0 0 12 12"
                w="1.4rem"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Shape
                </title>
                <path
                  d="M4.625.131l2.903.037-.018 1.41A4.79 4.79 0 0 1 9.265 2.61l1.243-.69 1.42 2.505-1.244.69c.14.674.127 1.363-.027 2.018l1.227.722-1.484 2.468-1.226-.721a4.805 4.805 0 0 1-1.78.987L7.373 12l-2.902-.036.018-1.411A4.788 4.788 0 0 1 2.735 9.52l-1.244.689-1.42-2.505 1.244-.689a4.676 4.676 0 0 1 .027-2.02l-1.225-.72L1.6 1.808l1.225.72a4.806 4.806 0 0 1 1.782-.988L4.625.131zm3.339 4.846a2.214 2.214 0 0 1-.864 3.03 2.265 2.265 0 0 1-3.064-.853 2.214 2.214 0 0 1 .863-3.031 2.265 2.265 0 0 1 3.065.854z"
                  fill="#000"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            Settings
          </span>
        </a>
      </div>
      <div
        dir="auto"
        ml="0.35rem"
        mr="0.35rem"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "WebkitFlexShrink": 0,
            "WebkitTextDecorationColor": "rgba(0,0,0,1.00)",
            "WebkitTextDecorationStyle": "solid",
            "borderBottomWidth": "0px",
            "borderLeftWidth": "0px",
            "borderRightWidth": "0px",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "color": "rgba(153,153,153,1.00)",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "fontFamily": "HelveticaNeue-Medium",
            "fontSize": "1.05rem",
            "fontStyle": "inherit",
            "fontVariant": "inherit",
            "fontWeight": "inherit",
            "lineHeight": "1.4rem",
            "marginBottom": "0px",
            "marginLeft": "0.35rem",
            "marginRight": "0.35rem",
            "marginTop": "0px",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "textDecoration": "underline",
            "textDecorationColor": "rgba(0,0,0,1.00)",
            "textDecorationStyle": "solid",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
      >
        <a
          c="#000000"
          className="ulink-mock c2"
          hc="#999999"
          href="/invites"
          hu={0}
          inline={0}
          onClick={[Function]}
          styles={
            Array [
              "font-size: 1.05rem; line-height: 1.4rem; font-family: HelveticaNeue-Medium; color: #999999; text-decoration: underline;",
              " ",
              [Function],
              ";",
              [Function],
              ";",
            ]
          }
        >
          <span
            align="center"
            dir="auto"
            fdirection="row"
            ml="0.7rem"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexBasis": "auto",
                "WebkitFlexDirection": "row",
                "WebkitFlexShrink": 0,
                "alignItems": "center",
                "borderBottomWidth": "0px",
                "borderLeftWidth": "0px",
                "borderRightWidth": "0px",
                "borderTopWidth": "0px",
                "boxSizing": "border-box",
                "color": "inherit",
                "display": "flex",
                "flexBasis": "auto",
                "flexDirection": "row",
                "flexShrink": 0,
                "fontFamily": "inherit",
                "fontSize": "inherit",
                "fontStyle": "inherit",
                "fontVariant": "inherit",
                "fontWeight": "inherit",
                "lineHeight": "inherit",
                "marginBottom": "0px",
                "marginLeft": "0.7rem",
                "marginRight": "0px",
                "marginTop": "0px",
                "msFlexAlign": "center",
                "msFlexDirection": "row",
                "msFlexNegative": 0,
                "msFlexPreferredSize": "auto",
                "paddingBottom": "0px",
                "paddingLeft": "0px",
                "paddingRight": "0px",
                "paddingTop": "0px",
                "position": "relative",
                "textDecoration": "none",
                "whiteSpace": "inherit",
                "wordWrap": "break-word",
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "vertical",
                  "WebkitFlexBasis": "auto",
                  "WebkitFlexDirection": "column",
                  "WebkitFlexShrink": 0,
                  "alignItems": "stretch",
                  "borderBottomStyle": "solid",
                  "borderBottomWidth": "0px",
                  "borderLeftStyle": "solid",
                  "borderLeftWidth": "0px",
                  "borderRightStyle": "solid",
                  "borderRightWidth": "0px",
                  "borderTopStyle": "solid",
                  "borderTopWidth": "0px",
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flexBasis": "auto",
                  "flexDirection": "column",
                  "flexShrink": 0,
                  "marginBottom": "0px",
                  "marginLeft": "0px",
                  "marginRight": "0.35rem",
                  "marginTop": "0px",
                  "minHeight": "0px",
                  "minWidth": "0px",
                  "msFlexAlign": "stretch",
                  "msFlexDirection": "column",
                  "msFlexNegative": 0,
                  "msFlexPreferredSize": "auto",
                  "paddingBottom": "0px",
                  "paddingLeft": "0px",
                  "paddingRight": "0px",
                  "paddingTop": "0px",
                  "position": "relative",
                  "zIndex": 0,
                }
              }
            >
              <svg
                bg="#999999"
                h="1.4rem"
                height="13"
                viewBox="0 0 15 13"
                w="1.4rem"
                width="15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Group 33
                </title>
                <g
                  fill="#000"
                  fillRule="evenodd"
                >
                  <path
                    d="M5.463 7.444c1.439 0 2.605-1.765 2.605-3.163-.035-1.373-1.19-2.469-2.604-2.469-1.413 0-2.568 1.096-2.604 2.469-.002 1.39 1.165 3.163 2.603 3.163zM7.867 7.743h-.134c-.63.788-1.433 1.222-2.27 1.222-.836 0-1.638-.426-2.27-1.222H3.06c-.813 0-1.592.314-2.166.874A2.933 2.933 0 0 0 0 10.725v1.837h10.927v-1.837a2.933 2.933 0 0 0-.894-2.108 3.105 3.105 0 0 0-2.166-.874zM12.868 2.115V.042h-1.773v2.073H8.963v1.724h2.132V5.91h1.773V3.84H15V2.115z"
                  />
                </g>
              </svg>
            </div>
            Invite Friend
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
